--- a/studentHomePage2.css
+++ b/studentHomePage2.css
@@ -4,6 +4,27 @@ body{
     color:#333;
 	font-family: Calibri;
 }
+.stats{
+    position: absolute;
+    top: 110px;
+    left: 1000px;
+    background-color: #FF9900;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Calabri;
+    font-size:20px;
+    font-weight:bold;
+    padding:9px 20px 9px 20px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #8a3e3e;
+}
+.stats:hover{
+    background-color:rgb(0,150,210);
+}
+.stats:active{
+    background-color:rgb(0,200,250);
+}
 .courses{
     position: absolute;
     top: 150px;
