--- a/studentHomePage2.css
+++ b/studentHomePage2.css
@@ -4,16 +4,31 @@ body{
     color:#333;
 	font-family: Calibri;
 }
+.stats{
+    position: absolute;
+    background-color: #FF9900;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Calabri;
+    font-size:20px;
+    font-weight:bold;
+    padding:9px 20px 9px 20px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #8a3e3e;
+	top: 110px;
+    left: 1275px;
+}
 .courses{
     position: absolute;
-    top: 200px;
-	left: 400px;
+    top: 150px;
+	left: 350px;
     width: 220px;
 }
 .testEachCourse{
    background-image: url('images/bg-body.jpg');
    position: relative;
-   left: 400px;
+   left: 500px;
    width: 800px;
    height: 63%;
    border-spacing: 15px;
@@ -51,7 +66,9 @@ body{
     float: left;
 }
 #button{
-    float: right;
+    position:absolute;
+    right: 10px;
+    padding-right: 15px;
 }
 #takeTestButton {
     width: 40px;
@@ -169,27 +186,44 @@ div.content{
 
 /********************************************************/
 
-@media screen and (max-width: 1800px) {
+@media screen and (max-width: 1700px) {
 	.courses{
 		position: absolute;
-		top: 200px;
-		left: 200px;
+		left: 300px;
 		width: 220px;
 	}
+   .testEachCourse, #classTitle {
+      left: 450px;
+   }
+   .stats {
+      top: 113px;
+      left: 1202px;
+   }
 }
 @media screen and (max-width: 1400px) {
 	.courses{
 		position: absolute;
-		top: 200px;
-		left: 30px;
+		left: 80px;
 		width: 220px;
 	}
+   .testEachCourse, #classTitle {
+      left: 250px;
+   }
+   .stats {
+      top: 113px;
+      left: 985px;
+   }
 }
 @media screen and (max-width: 1100px) {
 	.courses{
 		position: static;
+		margin-top: 15px;
 	}
-	#testTD{
-		width: 600px;
-	}
+   .testEachCourse, #classTitle {
+      left: 0px;
+   }
+   .stats {
+      top: 410px;
+      left: 720px;
+   }
 }
