--- a/teacherHomePage.css
+++ b/teacherHomePage.css
@@ -3,14 +3,9 @@ body {
     margin:0px;
     font-family: Calibri;
 }
-img.header{
-     width:100%;
-     height:150px;
- }
+
 .stats{
     position: absolute;
-    top: 110px;
-    left: 1400px;
     background-color: #FF9900;
     display:inline-block;
     cursor:pointer;
@@ -21,6 +16,8 @@ img.header{
     padding:9px 20px 9px 20px;
     text-decoration:none;
     text-shadow:0px 1px 0px #8a3e3e;
+	top: 113px;
+    left: 1267px;
 }
 .stats:hover{
     background-color:rgb(0,150,210);
@@ -29,15 +26,15 @@ img.header{
     background-color:rgb(0,200,250);
 }
 .courses{
-    position: absolute;
-    top: 300px;
-	left: 400px;
-    width: 220px;
+   position: absolute;
+   top: 250px;
+   left: 350px;
+   width: 220px;
 }
 .testEachCourse{
-background-image: url('images/bg-body.jpg');
+   background-image: url('images/bg-body.jpg');
    position: relative;
-   left: 400px;
+   left: 500px;
    width: 800px;
    height: 63%;
    border-spacing: 15px;
@@ -83,6 +80,7 @@ background-image: url('images/bg-body.jpg');
 #button{
    position:absolute;
    right: 10px;
+   padding-right: 15px;
 }
 #editButton {
     width: 40px;
@@ -117,7 +115,6 @@ background-image: url('images/bg-body.jpg');
     background: url(images/buttons/delete.png);
     background-size: contain;
     border: 0px;
-    margin-right:20px;
 }
 
 #deleteButton:hover{
@@ -131,24 +128,26 @@ background-image: url('images/bg-body.jpg');
     background: url(images/buttons/grade.png);
     background-size: contain;
     border: 0px;
+	margin-left: 16px;
 }
 #gradeButton:hover{
     background: url(images/buttons/gradeHover.png);
     background-size: contain;
 }
 #classTitle{
-    font-size: 40px;
-	margin-top: 50px;
-    position: relative;
-    left: 400px;
-	top: 15px;
-    color:black;
-    z-index:100;
+   font-size: 40px;
+   margin-top: 50px;
+   position: relative;
+   left: 500px;
+   top: 15px;
+   color:black;
+   z-index:100;
+   min-width: 700px;
 }
 .create-button {
     z-index: 26;
     position: absolute;
-	left: 200px;
+	 left: 350px;
     top: 170px;
     width: 200px;
     height: 60px;
@@ -190,29 +189,54 @@ div.content{
    background: url('images/monkeyload.gif') 50% 50% no-repeat;
 }
 #form_table{
-position: relative;
+   position: relative;
 }
 /********************************************************/
 
-@media screen and (max-width: 1800px) {
+@media screen and (max-width: 1700px) {
 	.courses{
 		position: absolute;
-		left: 200px;
+		left: 300px;
 		width: 220px;
 	}
+   .create-button {
+      left: 300px;
+   }
+   .testEachCourse, #classTitle {
+      left: 450px;
+   }
+   .stats {
+      top: 113px;
+      left: 1202px;
+   }
 }
 @media screen and (max-width: 1400px) {
 	.courses{
 		position: absolute;
-		left: 30px;
+		left: 80px;
 		width: 220px;
 	}
+   .create-button {
+      left: 80px;
+   }
+   .testEachCourse, #classTitle {
+      left: 250px;
+   }
+   .stats {
+      top: 113px;
+      left: 985px;
+   }
 }
 @media screen and (max-width: 1100px) {
-	.courses{
+	.courses, .create-button{
 		position: static;
+		margin-top: 15px;
 	}
-	#testTD{
-		width: 600px;
-	}
+   .testEachCourse, #classTitle {
+      left: 0px;
+   }
+   .stats {
+      top: 410px;
+      left: 720px;
+   }
 }
