--- a/testGradingPage.css
+++ b/testGradingPage.css
@@ -1,22 +1,11 @@
 
-body {
-    background-image: #FFF;
-    background-size: cover;
-    margin:0px 0px;
-    font-family: Rockwell, 'Courier Bold', Courier, Georgia, Times, 'Times New Roman', serif;
-    font-size: 18px;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 500;
-}
 #wrapper{
-width : 100%;
-height: auto;
-background-color:white;
-position:absolute;
-top: 100px;
-margin-bottom: 0px;
-z-index:30;
+   width : 100%;
+   height: auto;
+   position:absolute;
+   top: 100px;
+   z-index:30;
+   background-image: url('images/bg-body.jpg');
 }
 #test_info {
    position: absolute;
@@ -40,12 +29,6 @@ z-index:30;
    min-width: 60px;
    max-width: 60px;
 }
-img.header{
-   position: fixed;
-   width:100%;
-   height:150px;
-   z-index: 40;
-}
 #studentTable{
   width: 200px;
 }
@@ -61,23 +44,14 @@ img.header{
   background-color: #3399FF;
   cursor:pointer;
 }
-img.testLogo{
-    width: 200px;
-    position:fixed;
-    top:0px;
-    left: 50px;
-    z-index:100;
-}
 
 .testQuestions{
     position: relative;
-    top: 30px;
+	padding-top: 100px;
     left: 300px;
     width: 900px;
-   min-height: 300px;
 /*    overflow-y: scroll;*/
    border-spacing: 15px;
-   border: 5px solid lightblue;
    z-index:50;
 }
 .essayText{
@@ -170,10 +144,10 @@ overflow-y:scroll;
 
 div.content{
     width:90%;
-    top: 70px;
-    height: auto;
+    top: 10px;
     padding-left:20px;
     margin:0px auto;
+   margin-bottom: 50px;
     text-align: left;
     line-height:40px;
     left:0px;
@@ -188,157 +162,6 @@ div.content{
     font-family: 'Arial Black', 'Arial Bold', Gadget, sans-serif;
     color: #ffffff;
 }
-
-.footer {
-   color: #666666;
-   position: relative;
-   height: 150px;
-   width: 100%;
-   text-align: center;
-}
-.footer div {
-   position: absolute;
-   width: 100%;
-   bottom: 15px;
-   color: white;
-   z-index: 20;
-}
-img.footerblue {
-   width:100%;
-   height:100px;
-   position: absolute;
-   bottom: 0px;
-   left: 0;
-   z-index: 10;
-}
-
-
-/* this is the menu */
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:700);
-#cssmenu {
-   position: fixed;
-   background: rgba(0,0,0,0);
-   top: 30px;
-   right : 10%;
-   width: 500px;
-   z-index: 100;
-}
-#cssmenu ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    line-height: 1;
-    display: block;
-    zoom: 1;
-}
-#cssmenu ul:after {
-    content: " ";
-    display: block;
-    font-size: 0;
-    height: 0;
-    clear: both;
-    visibility: hidden;
-}
-#cssmenu ul li {
-    display: inline-block;
-    padding: 0;
-    margin: 0;
-}
-#cssmenu.align-right ul li {
-    float: right;
-}
-#cssmenu.align-center ul {
-    text-align: center;
-}
-#cssmenu ul li a {
-    color: #fff;
-    text-decoration: none;
-    display: block;
-    padding: 15px 25px;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 14px;
-    position: relative;
-    -webkit-transition: color .25s;
-    -moz-transition: color .25s;
-    -ms-transition: color .25s;
-    -o-transition: color .25s;
-    transition: color .25s;
-}
-#cssmenu ul li a:hover {
-    color: #ffffff ;
-}
-#cssmenu ul li a:hover:before {
-    width: 100%;
-}
-#cssmenu ul li a:after {
-    content: "";
-    display: block;
-    position: absolute;
-    right: -3px;
-    top: 19px;
-    height: 6px;
-    width: 6px;
-    background: #fff;
-    opacity: .5;
-}
-#cssmenu ul li a:before {
-    content: "";
-    display: block;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 3px;
-    width: 0;
-    background: #fff;
-    -webkit-transition: width .25s;
-    -moz-transition: width .25s;
-    -ms-transition: width .25s;
-    -o-transition: width .25s;
-    transition: width .25s;
-}
-#cssmenu ul li.last > a:after,
-#cssmenu ul li:last-child > a:after {
-    display: none;
-}
-#cssmenu ul li.active a {
-    color: #fff;
-}
-#cssmenu ul li.active a:before {
-    width: 100%;
-}
-#cssmenu.align-right li.last > a:after,
-#cssmenu.align-right li:last-child > a:after {
-    display: block;
-}
-#cssmenu.align-right li:first-child a:after {
-    display: none;
-}
-@media screen and (max-width: 768px) {
-    #cssmenu ul li {
-        float: none;
-        display: block;
-    }
-    #cssmenu ul li a {
-        width: 100%;
-        -moz-box-sizing: border-box;
-        -webkit-box-sizing: border-box;
-        box-sizing: border-box;
-        border-bottom: 1px solid #fff;
-    }
-    #cssmenu ul li.last > a,
-    #cssmenu ul li:last-child > a {
-        border: 0;
-    }
-    #cssmenu ul li a:after {
-        display: none;
-    }
-    #cssmenu ul li a:before {
-        display: none;
-    }
-}
-
 .loader {
    position: relative;
    margin-left: auto;
@@ -346,7 +169,7 @@ img.footerblue {
    width: 100%;
    height: 500px;
    z-index: 9999;
-   background: url('./images/monkeyload.gif') 50% 50% no-repeat rgb(249,249,249);
+   background: url('./images/monkeyload.gif') 50% 50% no-repeat;
 }
 .table_border_style table{
 	border:1px solid #66CCFF;
