Massie Style Polishes

--- a/studentHomePage2.css
+++ b/studentHomePage2.css
@@ -1,13 +1,12 @@
 body{
-    background: #ECECEC;
+	background-size: cover;
     margin:0px;
-    color:#333;
 	font-family: Calibri;
 }
 .stats{
     position: absolute;
     top: 110px;
-    left: 1000px;
+    left: 1279px;
     background-color: #FF9900;
     display:inline-block;
     cursor:pointer;
@@ -28,13 +27,13 @@ body{
 .courses{
     position: absolute;
     top: 150px;
-	left: 400px;
+	left: 350px;
     width: 220px;
 }
 .testEachCourse{
    background-image: url('images/bg-body.jpg');
    position: relative;
-   left: 500px;
+   left: 400px;
    width: 800px;
    height: 63%;
    border-spacing: 15px;
@@ -72,9 +71,7 @@ body{
     float: left;
 }
 #button{
-    position:absolute;
-    right: 10px;
-    padding-right: 15px;
+    float: right;
 }
 #takeTestButton {
     width: 40px;
@@ -193,46 +190,75 @@ div.content{
 
 /********************************************************/
 
-@media screen and (max-width: 1700px) {
-	.courses{
-		position: absolute;
-		top: 150px;
-		left: 150px;
-		width: 220px;
-	}
+@media screen and (max-width: 1770px) {
+   .courses{
+      position: absolute;
+      left: 300px;
+      width: 220px;
+   }
    .testEachCourse, #classTitle {
       left: 450px;
    }
    .stats {
-      top: 110px;
-      left: 1202px;
+      left: 1200px;
    }
 }
-@media screen and (max-width: 1400px) {
-	.courses{
-		position: absolute;
-		top: 150px;
-		left: 30px;
-		width: 220px;
-	}
+@media screen and (max-width: 1600px) {
+   .courses{
+      position: absolute;
+      left: 250px;
+      width: 220px;
+   }
    .testEachCourse, #classTitle {
       left: 250px;
    }
    .stats {
-      top: 113px;
-      left: 985px;
+      left: 1150px;
    }
 }
-@media screen and (max-width: 1100px) {
-	.courses{
-		position: static;
-		margin-top: 15px;
-	}
-   .testEachCourse, #classTitle {
-      left: 0px;
+@media screen and (max-width: 1550px) {
+   .courses{
+      left: 200px;
    }
    .stats {
-      top: 410px;
-      left: 720px;
+      left: 1100px;
+   }
+}
+@media screen and (max-width: 1500px) {
+   .courses{
+      left: 150px;
+   }
+   .stats {
+      left: 1050px;
+   }
+}
+@media screen and (max-width: 1450px) {
+   .courses{
+      left: 100px;
+   }
+   .stats {
+      left: 1000px;
+   }
+}
+@media screen and (max-width: 1400px) {
+   .courses{
+      left: 50px;
+   }
+   .stats {
+      left: 950px;
+   }
+}
+@media screen and (max-width: 1200px) {
+   .courses{
+      position: static;
+      margin-top: 15px;
+	  margin-bottom: 10px;
+   }
+   .testEachCourse, #classTitle {
+	  position: static;
+   }
+   .stats {
+      top: 130px;
+      left: 724px;
    }
 }
