--- a/teacherHomePage.css
+++ b/teacherHomePage.css
@@ -3,11 +3,14 @@ body {
     margin:0px;
     font-family: Calibri;
 }
-
+img.header{
+     width:100%;
+     height:150px;
+ }
 .stats{
     position: absolute;
     top: 110px;
-    left: 1000px;
+    left: 1270px;
     background-color: #FF9900;
     display:inline-block;
     cursor:pointer;
@@ -18,8 +21,6 @@ body {
     padding:9px 20px 9px 20px;
     text-decoration:none;
     text-shadow:0px 1px 0px #8a3e3e;
-	top: 113px;
-    left: 1267px;
 }
 .stats:hover{
     background-color:rgb(0,150,210);
@@ -30,7 +31,7 @@ body {
 .courses{
    position: absolute;
    top: 250px;
-   left: 400px;
+   left: 350px;
    width: 220px;
 }
 .testEachCourse{
@@ -82,7 +83,6 @@ body {
 #button{
    position:absolute;
    right: 10px;
-   padding-right: 15px;
 }
 #editButton {
     width: 40px;
@@ -117,6 +117,7 @@ body {
     background: url(images/buttons/delete.png);
     background-size: contain;
     border: 0px;
+    margin-right:20px;
 }
 
 #deleteButton:hover{
@@ -130,7 +131,7 @@ body {
     background: url(images/buttons/grade.png);
     background-size: contain;
     border: 0px;
-	margin-left: 16px;
+	margin-right: 15px;
 }
 #gradeButton:hover{
     background: url(images/buttons/gradeHover.png);
@@ -140,7 +141,7 @@ body {
    font-size: 40px;
    margin-top: 50px;
    position: relative;
-   left: 400px;
+   left: 500px;
    top: 15px;
    color:black;
    z-index:100;
@@ -149,7 +150,7 @@ body {
 .create-button {
     z-index: 26;
     position: absolute;
-	left: 200px;
+	 left: 350px;
     top: 170px;
     width: 200px;
     height: 60px;
@@ -193,55 +194,88 @@ div.content{
 #form_table{
    position: relative;
 }
+
 /********************************************************/
 
-@media screen and (max-width: 1700px) {
-	.courses{
-		position: absolute;
-		left: 300px;
-		width: 220px;
-	}
-   .create-button {
-      left: 200px;
+@media screen and (max-width: 1770px) {
+   .courses, .create-button{
+      position: absolute;
+      left: 300px;
+   }
+   .testEachCourse, #classTitle {
+      left: 450px;
+   }
+   .stats {
+      left: 1200px;
+   }
+}
+@media screen and (max-width: 1600px) {
+   .courses, .create-button{
+      position: absolute;
+      left: 250px;
    }
    .testEachCourse, #classTitle {
       left: 400px;
    }
    .stats {
-      top: 110px;
       left: 1150px;
    }
 }
-@media screen and (max-width: 1400px) {
-	.courses{
-		position: absolute;
-		left: 80px;
-		width: 220px;
-	}
-   .create-button {
-      left: 30px;
+@media screen and (max-width: 1550px) {
+   .courses, .create-button{
+      left: 200px;
+   }
+   .testEachCourse, #classTitle {
+      left: 350px;
+   }
+   .stats {
+      left: 1100px;
+   }
+}
+@media screen and (max-width: 1500px) {
+   .courses, .create-button{
+      left: 150px;
+   }
+   .testEachCourse, #classTitle {
+      left: 300px;
+   }
+   .stats {
+      left: 1050px;
+   }
+}
+@media screen and (max-width: 1450px) {
+   .courses, .create-button{
+      left: 100px;
    }
    .testEachCourse, #classTitle {
       left: 250px;
    }
    .stats {
-      top: 110px;
       left: 1000px;
    }
 }
-@media screen and (max-width: 1100px) {
-	.courses, .create-button{
-		position: static;
-		margin-top: 15px;
-	}
-   .testEachCourse, #classTitle {
-      left: 30px;
+@media screen and (max-width: 1400px) {
+   .courses, .create-button{
+      left: 50px;
    }
-	#testTD{
-		width: 600px;
-	}
+   .testEachCourse, #classTitle {
+      left: 200px;
+   }
    .stats {
-      top: 390px;
-      left: 600px;
+      left: 950px;
+   }
+}
+@media screen and (max-width: 1200px) {
+   .courses, .create-button{
+      position: static;
+      margin-top: 15px;
+	  margin-bottom: 10px;
+   }
+   .testEachCourse, #classTitle {
+	  position: static;
+   }
+   .stats {
+      top: 110px;
+      left: 730px;
    }
 }
