--- a/testGradingPage.css
+++ b/testGradingPage.css
@@ -60,11 +60,15 @@
 
 .testQuestions{
     position: relative;
-	padding-top: 100px;
+	margin-top: 50px;
     left: 300px;
     width: 900px;
    border-spacing: 15px;
    z-index:50;
+}
+#t_save {
+   width:50px;
+   height: 21px;
 }
 .essayText{
 	width: 95%;
@@ -184,4 +188,12 @@ div.content{
 }
 .table_border_style table{
 	
+}
+
+.t_ans {
+   color:orangered;
+}
+
+.s_ans {
+   color: cadetblue;
 }
