2015-04-20 Lots of debugging

--- a/testMakingPage.css
+++ b/testMakingPage.css
@@ -1,3 +1,6 @@
+#logo img{
+   border-style: none;
+}
 .logo{
 	margin-left: auto;
 	margin-right: auto;
@@ -19,6 +22,11 @@
    -ms-transition: all 0.3s ease-out;
    -o-transition: all 0.3s ease-out;
    transition: all 0.3s ease-out;
+}
+.inputsTime  {
+   min-width: 50px;
+   margin: 0 0 0 0;
+   padding: 0 0 0 0;
 }
 
 .inputs:focus {
@@ -383,7 +391,7 @@ input[type=text]:focus, textarea:focus {
    margin: 0;
    border: 0;
    border-style: none;
-   background-color: red;
+   /*background-color: red;*/
    float: right;
 }
 
