--- a/testTakingPage.css
+++ b/testTakingPage.css
@@ -8,7 +8,10 @@
    z-index:100;
    min-width: 700px;
 }
-
+#name_tag{
+padding-right: 50px;
+font-size:30px;
+}
 .testQuestions{
     position: relative;
 	margin-top: 20px;
