--- a/testMakingPage.css
+++ b/testMakingPage.css
@@ -1,3 +1,6 @@
+#logo img{
+   border-style: none;
+}
 .logo{
 	margin-left: auto;
 	margin-right: auto;
@@ -388,7 +391,7 @@ input[type=text]:focus, textarea:focus {
    margin: 0;
    border: 0;
    border-style: none;
-   background-color: red;
+   /*background-color: red;*/
    float: right;
 }
 
